# lez-multisig-framework

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SPEC.md  flake.nix
.github/workflows/: ci-generate.yml  ci.yml  e2e.yml
cli/: Cargo.toml  multisig.rs
docs/: FURPS.md  ecosystem-project.md  gap-analysis.md  lez-framework-analysis.md  nssa-framework-analysis.md
e2e_tests/: Cargo.toml  run_e2e.sh
e2e_tests/tests/: e2e_member_management.rs  e2e_multisig.rs
examples/program_deployment/: Cargo.toml
idl-gen/: Cargo.toml
idl-gen/src/: main.rs
lez-multisig-ffi/: Cargo.toml  flake.nix
lez-multisig-ffi/include/: lez_multisig.h
lez-multisig-ffi/src/: lib.rs  multisig.rs  multisig_idl.json
methods/guest/: Cargo.toml
multisig_core/: Cargo.toml
multisig_core/src/: lib.rs
multisig_program/: Cargo.toml
multisig_program/src/: approve.rs  create_multisig.rs  execute.rs  lib.rs  propose.rs  propose_config.rs  reject.rs
scripts/: DEMO-RUNBOOK.md  build-guest.sh  demo-full-flow.sh  demo-logoscore.sh  mock-codex.py  run_e2e.sh  token-idl.json
treasury_core/: Cargo.toml
treasury_core/src/: lib.rs
treasury_program/: Cargo.toml
treasury_program/src/: add_member.rs  change_threshold.rs  create_multisig.rs  create_vault.rs  deposit.rs  execute.rs  lib.rs  remove_member.rs  send.rs
