[package]
name = "lez-multisig-e2e"
version = "0.1.0"
edition = "2024"

[[test]]
name = "e2e_multisig"
path = "tests/e2e_multisig.rs"

[dependencies]
multisig_core = { path = "../multisig_core" }
nssa = { git = "https://github.com/logos-blockchain/lssa.git" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", features = ["host"] }
common = { git = "https://github.com/logos-blockchain/lssa.git" }
token_core = { git = "https://github.com/logos-blockchain/lssa.git" }
risc0-zkvm = "3.0"
borsh = "1.5"
tokio = { version = "1", features = ["full"] }

[lib]
path = "src/lib.rs"
