[package]
name = "lez-multisig-e2e"
version = "0.1.0"
edition = "2024"

[[test]]
name = "e2e_multisig"
path = "tests/e2e_multisig.rs"

[[test]]
name = "e2e_member_management"
path = "tests/e2e_member_management.rs"

[dependencies]
multisig_core = { path = "../multisig_core" }
nssa = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b", features = ["host"] }
common = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
token_core = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
risc0-zkvm = "3.0"
borsh = "1.5"
tokio = { version = "1", features = ["full"] }

lez-multisig-ffi = { path = "../lez-multisig-ffi" }

[lib]
path = "src/lib.rs"
