[package]
name = "lez-multisig-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI wrapper for lez-multisig — enables Logos Core Qt plugin integration"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
multisig_core = { path = "../multisig_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
hex = "0.4"
bs58 = "0.5"

# nssa deps for transaction building
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b", features = ["host"] }
nssa = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
common = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
wallet = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b" }
borsh = "1.5"
sha2 = "0.10"
