[package]
name = "multisig-guest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "multisig"
path = "src/bin/multisig.rs"

[dependencies]
multisig_core = { path = "../../multisig_core" }
multisig_program = { path = "../../multisig_program" }
nssa_core.workspace = true
nssa-framework = { git = "https://github.com/jimmy-claw/nssa-framework.git" }
risc0-zkvm.workspace = true
borsh.workspace = true
